# wildberries_bot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  env.example  postgres-local.yaml  to_do.txt
bot/: Dockerfile  README.md  config.py  env.example  pyproject.toml  telegram_bot.py
bot/constants/: callback_data.py  constant.py  keyboards.py  messages.py  states.py
bot/handlers/: menu.py  position.py  rate.py  registration.py  stock.py  subscriptions.py
bot/services/: aio_client.py  many_cities_position.py  position.py  positions.py  services.py  stock.py  wh_ratio.py
expert_system/: Dockerfile  README.md  docker-entrypoint.sh  env.example  manage.py  pyproject.toml
expert_system/api/: apps.py  serializers.py  urls.py
expert_system/data_handler/: admin.py  apps.py  models.py  views.py
expert_system/data_handler/migrations/: 0001_initial.py  0002_city_warehouse.py  0003_alter_requestposition_id_alter_requestrate_id_and_more.py
expert_system/expert_system/: asgi.py  settings.py  wsgi.py
expert_system/users/: admin.py  models.py
expert_system/users/migrations/: 0001_initial.py
nginx/: default.conf
